# conway-game-of-life

./: .gitignore  CMakeLists.txt  README.org
src/: main.cpp
